src/test/deca/syntax/valid/homeMade/include.deca
#include "Math.decah"

class A {

}

{ 
    print("Hello Math");
}